<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MyKidsRides"
    tools:showIn="@layout/activity_my_kids_rides">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="249dp"
        android:layout_height="37dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="592dp"
        android:text="@string/MyKidsRides"
        android:textSize="@dimen/browser_actions_context_menu_min_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:srcCompat="@tools:sample/avatars[15]" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="35dp"
        android:layout_height="22dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="139dp"
        android:text="@string/Kid1"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="96dp"
        android:text="@string/Kid2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ListView
        android:layout_width="142dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="66dp"
        android:entries="@string/EditKid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/_dynamic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <ListView
        android:layout_width="149dp"
        android:layout_height="0dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:entries="@string/action_add_new_kid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/_dynamic"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

</android.support.constraint.ConstraintLayout>